# music_tag_rs

./: Cargo.toml  PKGBUILD  README.md  build.sh  meson.build  readme.md  readme_CN.md
data/: com.github.nobodygx.musictag.desktop.in  com.github.nobodygx.musictag.gschema.xml  com.github.nobodygx.musictag.metainfo.xml.in  meson.build  musictag.gresource.xml
data/themes/: theme_selector.css
data/ui/: main_window.ui
po/: zh_CN.po
src/: application.rs  config.rs  main.rs
src/core/: meson.build
src/gui/: main_window.rs  meson.build  mod.rs  preferences.rs  theme_selector.rs
