[package]
name = "musictag"
version = "0.1.0"
authors = ["nobodygx"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
svgbob = "0.7.2"
